<resources>
    <string name="app_name">RMB</string>
    <string name="rmb_hint">Input RMB</string>
    <string name="hello">hello</string>
    <string name="btn_dollar_label">Dollar</string>
    <string name="btn_euro_label">Euro</string>
    <string name="btn_won_label">Won</string>
    <string name="btn_opencfg_label">Config</string>
    <string name="btn_save_label">Save</string>
    <string name="lable_add1">+1 point</string>
    <string name="lable_add2">+2 points</string>
    <string name="lable_add3">+3 points</string>
    <string name="btn_reset_lable">Reset</string>
    <string name="lable_set">Setting</string>
    <string name="lable_open_list">OpenList</string>
    <string name="rdo_home_label">首页</string>
    <string name="rdo_func_label">功能</string>
    <string name="rdo_setting_label">设置</string>

</resources>
