<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/rmb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/rmb_hint"
            android:inputType="numberDecimal"
            android:shadowColor="#E91E63"
            android:textColor="#E91E63"
            android:textColorHighlight="#E91E63"
            android:textColorHint="#E91E63"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/showOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/hello"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btn_dollar"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FF9800"
            android:gravity="center"
            android:text="@string/btn_dollar_label"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_euro"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FF9800"
            android:gravity="center"
            android:text="@string/btn_euro_label"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_won"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FF9800"
            android:gravity="center"
            android:text="@string/btn_won_label"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btn_opencfg"
            android:onClick="openOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#FF9800"
            android:gravity="center"
            android:text="@string/btn_opencfg_label"
            android:textSize="24sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>